--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,11 @@
     "@tailwindcss/vite": "^4.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.2.0",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.0.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
