--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.6",
     "letschat": "file:..",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.2.0",
+    "react-tinder-card": "^1.6.4",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.6",
     "zustand": "^5.0.3"
