--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.12.2",
     "letschat": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
